# bare-ios

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package-lock.json  package.json  project.yml
.github/workflows/: test.yml
app/: App-Bridging-Header.h  App.entitlements  App.swift  AppDelegate.m  AppDelegate.swift  NotificationService.swift  NotificationServiceExtension.entitlements  VoIP.swift  VoIPHandler.swift  Worker.h  Worker.m  app.js  main.c  main.js  main.m  push.js
app/addons/: addons.yml
app/frameworks/: .gitignore
extension/: NotificationService.swift  NotificationServiceExtension.entitlements
scripts/: link.mjs
src/: app.js
